if/freebasic/hpdf.bi


'extern "c" 
declare function HPDF_GetVersion cdecl alias "HPDF_GetVersion" () as zstring ptr
declare function HPDF_NewEx cdecl alias "HPDF_NewEx" (byval user_error_fn as HPDF_Error_Handler, byval user_alloc_fn as HPDF_Alloc_Func, byval user_free_fn as HPDF_Free_Func, byval mem_pool_buf_size as HPDF_UINT, byval user_data as any ptr) as HPDF_Doc
declare function HPDF_New cdecl alias "HPDF_New" (byval user_error_fn as HPDF_Error_Handler, byval user_data as any ptr) as HPDF_Doc
declare function HPDF_SetErrorHandler cdecl alias "HPDF_SetErrorHandler" (byval pdf as HPDF_Doc, byval user_error_fn as HPDF_Error_Handler) as HPDF_STATUS
declare sub HPDF_Free cdecl alias "HPDF_Free" (byval pdf as HPDF_Doc)
declare function HPDF_NewDoc cdecl alias "HPDF_NewDoc" (byval pdf as HPDF_Doc) as HPDF_STATUS
declare sub HPDF_FreeDoc cdecl alias "HPDF_FreeDoc" (byval pdf as HPDF_Doc)
declare function HPDF_HasDoc cdecl alias "HPDF_HasDoc" (byval pdf as HPDF_Doc) as HPDF_BOOL
declare sub HPDF_FreeDocAll cdecl alias "HPDF_FreeDocAll" (byval pdf as HPDF_Doc)
declare function HPDF_SaveToStream cdecl alias "HPDF_SaveToStream" (byval pdf as HPDF_Doc) as HPDF_STATUS
declare function HPDF_GetStreamSize cdecl alias "HPDF_GetStreamSize" (byval pdf as HPDF_Doc) as HPDF_UINT32
declare function HPDF_ReadFromStream cdecl alias "HPDF_ReadFromStream" (byval pdf as HPDF_Doc, byval buf as HPDF_BYTE ptr, byval size as HPDF_UINT32 ptr) as HPDF_STATUS
declare function HPDF_ResetStream cdecl alias "HPDF_ResetStream" (byval pdf as HPDF_Doc) as HPDF_STATUS
declare function HPDF_SaveToFile cdecl alias "HPDF_SaveToFile" (byval pdf as HPDF_Doc, byval file_name as zstring ptr) as HPDF_STATUS
declare function HPDF_GetError cdecl alias "HPDF_GetError" (byval pdf as HPDF_Doc) as HPDF_STATUS
declare function HPDF_GetErrorDetail cdecl alias "HPDF_GetErrorDetail" (byval pdf as HPDF_Doc) as HPDF_STATUS
declare sub HPDF_ResetError cdecl alias "HPDF_ResetError" (byval pdf as HPDF_Doc)
declare function HPDF_SetPagesConfiguration cdecl alias "HPDF_SetPagesConfiguration" (byval pdf as HPDF_Doc, byval page_per_pages as HPDF_UINT) as HPDF_STATUS
declare function HPDF_GetPageByIndex cdecl alias "HPDF_GetPageByIndex" (byval pdf as HPDF_Doc, byval index as HPDF_UINT) as HPDF_Page
declare function HPDF_GetPageLayout cdecl alias "HPDF_GetPageLayout" (byval pdf as HPDF_Doc) as HPDF_PageLayout
declare function HPDF_SetPageLayout cdecl alias "HPDF_SetPageLayout" (byval pdf as HPDF_Doc, byval layout as HPDF_PageLayout) as HPDF_STATUS
declare function HPDF_GetPageMode cdecl alias "HPDF_GetPageMode" (byval pdf as HPDF_Doc) as HPDF_PageMode
declare function HPDF_SetPageMode cdecl alias "HPDF_SetPageMode" (byval pdf as HPDF_Doc, byval mode as HPDF_PageMode) as HPDF_STATUS
declare function HPDF_GetViewerPreference cdecl alias "HPDF_GetViewerPreference" (byval pdf as HPDF_Doc) as HPDF_UINT
declare function HPDF_SetViewerPreference cdecl alias "HPDF_SetViewerPreference" (byval pdf as HPDF_Doc, byval value as HPDF_UINT) as HPDF_STATUS
declare function HPDF_SetOpenAction cdecl alias "HPDF_SetOpenAction" (byval pdf as HPDF_Doc, byval open_action as HPDF_Destination) as HPDF_STATUS
declare function HPDF_GetCurrentPage cdecl alias "HPDF_GetCurrentPage" (byval pdf as HPDF_Doc) as HPDF_Page
declare function HPDF_AddPage cdecl alias "HPDF_AddPage" (byval pdf as HPDF_Doc) as HPDF_Page
declare function HPDF_InsertPage cdecl alias "HPDF_InsertPage" (byval pdf as HPDF_Doc, byval page as HPDF_Page) as HPDF_Page
declare function HPDF_Page_SetWidth cdecl alias "HPDF_Page_SetWidth" (byval page as HPDF_Page, byval value as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_SetHeight cdecl alias "HPDF_Page_SetHeight" (byval page as HPDF_Page, byval value as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_SetSize cdecl alias "HPDF_Page_SetSize" (byval page as HPDF_Page, byval size as HPDF_PageSizes, byval direction as HPDF_PageDirection) as HPDF_STATUS
declare function HPDF_Page_SetRotate cdecl alias "HPDF_Page_SetRotate" (byval page as HPDF_Page, byval angle as HPDF_UINT16) as HPDF_STATUS
declare function HPDF_GetFont cdecl alias "HPDF_GetFont" (byval pdf as HPDF_Doc, byval font_name as zstring ptr, byval encoding_name as zstring ptr) as HPDF_Font
declare function HPDF_LoadType1FontFromFile cdecl alias "HPDF_LoadType1FontFromFile" (byval pdf as HPDF_Doc, byval afm_file_name as zstring ptr, byval data_file_name as zstring ptr) as zstring ptr
declare function HPDF_LoadTTFontFromFile cdecl alias "HPDF_LoadTTFontFromFile" (byval pdf as HPDF_Doc, byval file_name as zstring ptr, byval embedding as HPDF_BOOL) as zstring ptr
declare function HPDF_LoadTTFontFromFile2 cdecl alias "HPDF_LoadTTFontFromFile2" (byval pdf as HPDF_Doc, byval file_name as zstring ptr, byval index as HPDF_UINT, byval embedding as HPDF_BOOL) as zstring ptr
declare function HPDF_AddPageLabel cdecl alias "HPDF_AddPageLabel" (byval pdf as HPDF_Doc, byval page_num as HPDF_UINT, byval style as HPDF_PageNumStyle, byval first_page as HPDF_UINT, byval prefix as zstring ptr) as HPDF_STATUS
declare function HPDF_UseJPFonts cdecl alias "HPDF_UseJPFonts" (byval pdf as HPDF_Doc) as HPDF_STATUS
declare function HPDF_UseKRFonts cdecl alias "HPDF_UseKRFonts" (byval pdf as HPDF_Doc) as HPDF_STATUS
declare function HPDF_UseCNSFonts cdecl alias "HPDF_UseCNSFonts" (byval pdf as HPDF_Doc) as HPDF_STATUS
declare function HPDF_UseCNTFonts cdecl alias "HPDF_UseCNTFonts" (byval pdf as HPDF_Doc) as HPDF_STATUS
declare function HPDF_CreateOutline cdecl alias "HPDF_CreateOutline" (byval pdf as HPDF_Doc, byval parent as HPDF_Outline, byval title as zstring ptr, byval encoder as HPDF_Encoder) as HPDF_Outline
declare function HPDF_Outline_SetOpened cdecl alias "HPDF_Outline_SetOpened" (byval outline as HPDF_Outline, byval opened as HPDF_BOOL) as HPDF_STATUS
declare function HPDF_Outline_SetDestination cdecl alias "HPDF_Outline_SetDestination" (byval outline as HPDF_Outline, byval dst as HPDF_Destination) as HPDF_STATUS
declare function HPDF_Page_CreateDestination cdecl alias "HPDF_Page_CreateDestination" (byval page as HPDF_Page) as HPDF_Destination
declare function HPDF_Destination_SetXYZ cdecl alias "HPDF_Destination_SetXYZ" (byval dst as HPDF_Destination, byval left as HPDF_REAL, byval top as HPDF_REAL, byval zoom as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Destination_SetFit cdecl alias "HPDF_Destination_SetFit" (byval dst as HPDF_Destination) as HPDF_STATUS
declare function HPDF_Destination_SetFitH cdecl alias "HPDF_Destination_SetFitH" (byval dst as HPDF_Destination, byval top as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Destination_SetFitV cdecl alias "HPDF_Destination_SetFitV" (byval dst as HPDF_Destination, byval left as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Destination_SetFitR cdecl alias "HPDF_Destination_SetFitR" (byval dst as HPDF_Destination, byval left as HPDF_REAL, byval bottom as HPDF_REAL, byval right as HPDF_REAL, byval top as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Destination_SetFitB cdecl alias "HPDF_Destination_SetFitB" (byval dst as HPDF_Destination) as HPDF_STATUS
declare function HPDF_Destination_SetFitBH cdecl alias "HPDF_Destination_SetFitBH" (byval dst as HPDF_Destination, byval top as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Destination_SetFitBV cdecl alias "HPDF_Destination_SetFitBV" (byval dst as HPDF_Destination, byval left as HPDF_REAL) as HPDF_STATUS
declare function HPDF_GetEncoder cdecl alias "HPDF_GetEncoder" (byval pdf as HPDF_Doc, byval encoding_name as zstring ptr) as HPDF_Encoder
declare function HPDF_GetCurrentEncoder cdecl alias "HPDF_GetCurrentEncoder" (byval pdf as HPDF_Doc) as HPDF_Encoder
declare function HPDF_SetCurrentEncoder cdecl alias "HPDF_SetCurrentEncoder" (byval pdf as HPDF_Doc, byval encoding_name as zstring ptr) as HPDF_STATUS
declare function HPDF_Encoder_GetType cdecl alias "HPDF_Encoder_GetType" (byval encoder as HPDF_Encoder) as HPDF_EncoderType
declare function HPDF_Encoder_GetByteType cdecl alias "HPDF_Encoder_GetByteType" (byval encoder as HPDF_Encoder, byval text as zstring ptr, byval index as HPDF_UINT) as HPDF_ByteType
declare function HPDF_Encoder_GetUnicode cdecl alias "HPDF_Encoder_GetUnicode" (byval encoder as HPDF_Encoder, byval code as HPDF_UINT16) as HPDF_UNICODE
declare function HPDF_Encoder_GetWritingMode cdecl alias "HPDF_Encoder_GetWritingMode" (byval encoder as HPDF_Encoder) as HPDF_WritingMode
declare function HPDF_UseJPEncodings cdecl alias "HPDF_UseJPEncodings" (byval pdf as HPDF_Doc) as HPDF_STATUS
declare function HPDF_UseKREncodings cdecl alias "HPDF_UseKREncodings" (byval pdf as HPDF_Doc) as HPDF_STATUS
declare function HPDF_UseCNSEncodings cdecl alias "HPDF_UseCNSEncodings" (byval pdf as HPDF_Doc) as HPDF_STATUS
declare function HPDF_UseCNTEncodings cdecl alias "HPDF_UseCNTEncodings" (byval pdf as HPDF_Doc) as HPDF_STATUS
declare function HPDF_Page_CreateTextAnnot cdecl alias "HPDF_Page_CreateTextAnnot" (byval page as HPDF_Page, byval rect as HPDF_Rect, byval text as zstring ptr, byval encoder as HPDF_Encoder) as HPDF_Annotation
declare function HPDF_Page_CreateLinkAnnot cdecl alias "HPDF_Page_CreateLinkAnnot" (byval page as HPDF_Page, byval rect as HPDF_Rect, byval dst as HPDF_Destination) as HPDF_Annotation
declare function HPDF_Page_CreateURILinkAnnot cdecl alias "HPDF_Page_CreateURILinkAnnot" (byval page as HPDF_Page, byval rect as HPDF_Rect, byval uri as zstring ptr) as HPDF_Annotation
declare function HPDF_LinkAnnot_SetHighlightMode cdecl alias "HPDF_LinkAnnot_SetHighlightMode" (byval annot as HPDF_Annotation, byval mode as HPDF_AnnotHighlightMode) as HPDF_STATUS
declare function HPDF_LinkAnnot_SetBorderStyle cdecl alias "HPDF_LinkAnnot_SetBorderStyle" (byval annot as HPDF_Annotation, byval width as HPDF_REAL, byval dash_on as HPDF_UINT16, byval dash_off as HPDF_UINT16) as HPDF_STATUS
declare function HPDF_TextAnnot_SetIcon cdecl alias "HPDF_TextAnnot_SetIcon" (byval annot as HPDF_Annotation, byval icon as HPDF_AnnotIcon) as HPDF_STATUS
declare function HPDF_TextAnnot_SetOpened cdecl alias "HPDF_TextAnnot_SetOpened" (byval annot as HPDF_Annotation, byval opened as HPDF_BOOL) as HPDF_STATUS
declare function HPDF_LoadPngImageFromFile cdecl alias "HPDF_LoadPngImageFromFile" (byval pdf as HPDF_Doc, byval filename as zstring ptr) as HPDF_Image
declare function HPDF_LoadPngImageFromFile2 cdecl alias "HPDF_LoadPngImageFromFile2" (byval pdf as HPDF_Doc, byval filename as zstring ptr) as HPDF_Image
declare function HPDF_LoadJpegImageFromFile cdecl alias "HPDF_LoadJpegImageFromFile" (byval pdf as HPDF_Doc, byval filename as zstring ptr) as HPDF_Image
declare function HPDF_LoadRawImageFromFile cdecl alias "HPDF_LoadRawImageFromFile" (byval pdf as HPDF_Doc, byval filename as zstring ptr, byval width as HPDF_UINT, byval height as HPDF_UINT, byval color_space as HPDF_ColorSpace) as HPDF_Image
declare function HPDF_LoadRawImageFromMem cdecl alias "HPDF_LoadRawImageFromMem" (byval pdf as HPDF_Doc, byval buf as HPDF_BYTE ptr, byval width as HPDF_UINT, byval height as HPDF_UINT, byval color_space as HPDF_ColorSpace, byval bits_per_component as HPDF_UINT) as HPDF_Image
declare function HPDF_Image_GetSize cdecl alias "HPDF_Image_GetSize" (byval image as HPDF_Image) as HPDF_Point
declare function HPDF_Image_GetSize2 cdecl alias "HPDF_Image_GetSize2" (byval image as HPDF_Image, byval size as HPDF_Point ptr) as HPDF_STATUS
declare function HPDF_Image_GetWidth cdecl alias "HPDF_Image_GetWidth" (byval image as HPDF_Image) as HPDF_UINT
declare function HPDF_Image_GetHeight cdecl alias "HPDF_Image_GetHeight" (byval image as HPDF_Image) as HPDF_UINT
declare function HPDF_Image_GetBitsPerComponent cdecl alias "HPDF_Image_GetBitsPerComponent" (byval image as HPDF_Image) as HPDF_UINT
declare function HPDF_Image_GetColorSpace cdecl alias "HPDF_Image_GetColorSpace" (byval image as HPDF_Image) as zstring ptr
